--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav>
       <ul>
         <li><a href="#about me">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact Me</a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#contact me">Contact Me</a></li>
+        <li><a href="#resume">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -65,27 +65,26 @@
       </div>
 
       <div class="column main">
-        <p>France, less favoured on the whole as to matters spiritual than her
-        sister of the shield and trident, rolled with exceeding smoothness down
-        hill, making paper money and spending it. Under the guidance of her
-        Christian pastors, she entertained herself, besides, with such humane
-        achievements as sentencing a youth to have his hands cut off, his tongue
-        torn out with pincers, and his body burned alive, because he had not
-        kneeled down in the rain to do honour to a dirty procession of monks 
-        which passed within his view, at a distance of some fifty or sixty yards.
-        It is likely enough that, rooted in the woods of France and Norway,
-        there were growing trees, when that sufferer was put to death, already
-        marked by the Woodman, Fate, to come down and be sawn into boards,
-        to make a certain movable framework with a sack and a knife in it,
-        terrible in history. It is likely enough that in the rough outhouses of
-        some tillers of the heavy lands adjacent to Paris, there were sheltered
-        from the weather that very day, rude carts, bespattered with rustic mire,
-        snuffed about by pigs, and roosted in by poultry, which the Farmer,
-        Death, had already set apart to be his tumbrils of the Revolution. But
-        that Woodman and that Farmer, though they work unceasingly, work
-        silently, and no one heard them as they went about with muffled tread:
-        the rather, forasmuch as to entertain any suspicion that they were awake,
-        was to be atheistical and traitorous.</p>
+        <section class="cardbig">
+          <header>Project 1</header>
+          <p>Big Project</p>
+        </section>
+        <section class="cardsmall">
+          <header>Project 2</header>
+          <p>Small Project</p>
+        </section>
+        <section class="cardsmall">
+          <header>Project 3</header>
+          <p>Small Project</p>
+        </section>
+        <section class="cardsmall">
+          <header>Project 4</header>
+          <p>Small Project</p>
+        </section>
+        <section class="cardsmall">
+          <header>Project 5</header>
+          <p>Small Project</p>
+        </section>
       </div>
     </div>
 
@@ -122,7 +121,7 @@
     </div>
 
     <div class="row4">
-      <div class="column side" id="Resume">
+      <div class="column side" id="resume">
         <h4>Resume</h>
       </div>
 
