made the first project appear bigger than the others. implemented small animation on hover

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <header>
+    
     <h1>Andrew Huynh</h1>
+    <img src="../02-advanced-css-portfolio/assets/profile.jpg" alt="profile" class="profile">
     <nav>
       <ul>
         <li><a href="#about me">About</a></li>
@@ -24,7 +26,7 @@
   <main>
     <div class="row">
       <div class="column side" id="about me">
-        <h4>About Me</h4>
+        <h3>About Me</h3>
       </div>
 
       <div class="column main">
@@ -61,36 +63,67 @@
 
     <div class="row2">
       <div class="column side" id="work">
-        <h4>Work</h4>
+        <h3>Work</h3>
       </div>
 
       <div class="column main">
-        <section class="cardbig">
-          <header>Project 1</header>
-          <p>Big Project</p>
-        </section>
-        <section class="cardsmall">
-          <header>Project 2</header>
-          <p>Small Project</p>
-        </section>
-        <section class="cardsmall">
-          <header>Project 3</header>
-          <p>Small Project</p>
-        </section>
-        <section class="cardsmall">
-          <header>Project 4</header>
-          <p>Small Project</p>
-        </section>
-        <section class="cardsmall">
-          <header>Project 5</header>
-          <p>Small Project</p>
-        </section>
+        <div class="band">
+          <div class="project-1">
+            <a class="card">
+              <div class="thumb" style="background-image:url(./assets/placeholder1.jpg);"></div>
+              <article>
+                <h2>Project 1</h2>
+                <span>Big Project</span>
+              </article>
+            </a>
+          </div>
+
+          <div class="project-2">
+            <a class="card">
+              <div class="thumb" style="background-image:url(./assets/placeholder2.jpg);"></div>
+              <article>
+                <h2>Project 2</h2>
+                <span>Small Project</span>
+              </article>
+            </a>
+          </div>
+
+          <div class="project-3">
+            <a class="card">
+              <div class="thumb" style="background-image:url(./assets/palceholder3.jpg);"></div>
+              <article>
+                <h2>Project 3</h2>
+                <span>Small Project</span>
+              </article>
+            </a>
+          </div>
+
+          <div class="project-4">
+            <a class="card">
+              <div class="thumb" style="background-image:url(./assets/placeholder4.jpg);"></div>
+              <article>
+                <h2>Project 4</h2>
+                <span>Small Project</span>
+              </article>
+            </a>
+          </div>
+
+          <div class="project-5">
+            <a class="card">
+              <div class="thumb" style="background-image:url(./assets/placeholder5.jpg);"></div>
+              <article>
+                <h2>Project 5</h2>
+                <span>Small Project</span>
+              </article>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
 
     <div class="row3">
       <div class="column side" id="contact me">
-        <h4>Contact Me</h4>
+        <h3>Contact Me</h3>
       </div>
 
       <div class="column main">
@@ -122,7 +155,7 @@
 
     <div class="row4">
       <div class="column side" id="resume">
-        <h4>Resume</h>
+        <h3>Resume</h3>
       </div>
 
       <div class="column main">
