--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
       <div class="column main">
         <div class="band">
-          <div class="project-1">
-            <a class="card">
-              <div class="thumb" style="background-image:url(./assets/placeholder1.jpg);"></div>
+          <div class="project-1" alt="horiseon">
+            <a href="https://katyn-sh.github.io/horiseon-refactor/" class="card">
+              <div class="thumb" style="background-image:url(./assets/horiseon.jpg);"></div>
               <article>
-                <h2>Project 1</h2>
-                <span>Big Project</span>
+                <h2>Horiseon Refactor</h2>
+                <span>Refactored a pre-existing website to improve accessibility</span>
               </article>
             </a>
           </div>
@@ -82,8 +82,8 @@
             <a class="card">
               <div class="thumb" style="background-image:url(./assets/placeholder2.jpg);"></div>
               <article>
-                <h2>Project 2</h2>
-                <span>Small Project</span>
+                <h2>N700S Series</h2>
+                <span>Current rolling stock on the Tokaido Shinkansen, since March 2020</span>
               </article>
             </a>
           </div>
@@ -92,8 +92,8 @@
             <a class="card">
               <div class="thumb" style="background-image:url(./assets/palceholder3.jpg);"></div>
               <article>
-                <h2>Project 3</h2>
-                <span>Small Project</span>
+                <h2>0 Series</h2>
+                <span>Originally deployed October 1964 - September 1999</span>
               </article>
             </a>
           </div>
@@ -102,8 +102,8 @@
             <a class="card">
               <div class="thumb" style="background-image:url(./assets/placeholder4.jpg);"></div>
               <article>
-                <h2>Project 4</h2>
-                <span>Small Project</span>
+                <h2>100 Series</h2>
+                <span>Originally deployed October 1985 - September 2003</span>
               </article>
             </a>
           </div>
@@ -112,8 +112,8 @@
             <a class="card">
               <div class="thumb" style="background-image:url(./assets/placeholder5.jpg);"></div>
               <article>
-                <h2>Project 5</h2>
-                <span>Small Project</span>
+                <h2>300 Series</h2>
+                <span>Originally deployed March 1992 - March 2012</span>
               </article>
             </a>
           </div>
@@ -127,30 +127,13 @@
       </div>
 
       <div class="column main">
-        <p>In England, there was scarcely an amount of order and protection to
-        justify much national boasting. Daring burglaries by armed men, and
-        highway robberies, took place in the capital itself every night; families
-        were publicly cautioned not to go out of town without removing their
-        furniture to upholsterers’ warehouses for security; the highwayman in
-        the dark was a City tradesman in the light, and, being recognised and
-        challenged by his fellow-tradesman whom he stopped in his character of
-        “the Captain,” gallantly shot him through the head and rode away; the
-        mall was waylaid by seven robbers, and the guard shot three dead, and
-        then got shot dead himself by the other four, “in consequence of the failure of his ammunition:” after which the mall was robbed in peace; that
-        magnificent potentate, the Lord Mayor of London, was made to stand
-        and deliver on Turnham Green, by one highwayman, who despoiled the
-        illustrious creature in sight of all his retinue; prisoners in London gaols
-        fought battles with their turnkeys, and the majesty of the law fired blunderbusses in among them, loaded with rounds of shot and ball; thieves
-        snipped off diamond crosses from the necks of noble lords at Court
-        drawing-rooms; musketeers went into St. Giles’s, to search for contraband goods, and the mob fired on the musketeers, and the musketeers
-        fired on the mob, and nobody thought any of these occurrences much
-        out of the common way. In the midst of them, the hangman, ever busy
-        and ever worse than useless, was in constant requisition; now, stringing
-        up long rows of miscellaneous criminals; now, hanging a housebreaker
-        on Saturday who had been taken on Tuesday; now, burning people in
-        the hand at Newgate by the dozen, and now burning pamphlets at the 
-        door of Westminster Hall; to-day, taking the life of an atrocious murderer, and to-morrow of a wretched pilferer who had robbed a farmer’s
-        boy of sixpence.
+        <ul>
+          <li><strong>Email:</strong> <a href="#">tanhung.huynh@protonmail.ch</a></li>
+          <li><strong>Github:</strong> <a href="#">https://github.com/katyn-sh</a></li>
+          <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        </ul>
+  
+      </div>
     </div>
 
     <div class="row4">
@@ -159,14 +142,7 @@
       </div>
 
       <div class="column main">
-        <p>All these things, and a thousand like them, came to pass in and
-        close upon the dear old year one thousand seven hundred and seventyfive. Environed by them, while the Woodman and the Farmer worked
-        unheeded, those two of the large jaws, and those other two of the plain
-        and the fair faces, trod with stir enough, and carried their divine rights
-        with a high hand. Thus did the year one thousand seven hundred and
-        seventy-five conduct their Greatnesses, and myriads of small creatures—
-        the creatures of this chronicle among the rest—along the roads that lay
-        before them</p>
+        <p>Coming soon!</p>
       </div>
     </div>
 
