updated with exercise project

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
             </a>
           </div>
 
-          <div class="project-2">
-            <a class="card">
-              <div class="thumb" style="background-image:url(./assets/placeholder2.jpg);"></div>
+          <div class="project-2" alt="exercise">
+            <a href="https://pingdrew.github.io/project-1-group-6/" class="card">
+              <div class="thumb" style="background-image:url(./assets/FormFixerScrot.gif);"></div>
               <article>
-                <h2>N700S Series</h2>
-                <span>Current rolling stock on the Tokaido Shinkansen, since March 2020</span>
+                <h2>Form Fixer</h2>
+                <span>Integrated exercise tutorial dashboard</span>
               </article>
             </a>
           </div>
